syntax = "proto3";

option go_package = "sshproxy/sshproxypb";

service ServiceTunnel {
	rpc Connect (ConnectRequest) returns (ConnectResponse) {};
	rpc Disconnect (DisconnectRequest) returns (DisconnectResponse) {};
	rpc GetConnectNodes (GetConnectNodesRequest) returns (GetConnectNodesResponse) {};
}

message Service {
	string service_name = 1;
	string remote_address = 2;
	string proxy_address = 3;
}

message ConnectRequest {
	repeated Service services = 2;
}

message Node {
  string local_address = 1;
  string remote_address = 2;
  string host_address = 3;
  string service_name = 4;
  string tag = 5;
}

message ConnectResponse {
	repeated Node connected_nodes = 1;	
}

message DisconnectRequest {
	string host_address = 1;
	string proxy_address = 2;
}

message DisconnectResponse {}

message GetConnectNodesRequest {}

message GetConnectNodesResponse {
	repeated Node connected_nodes = 1;
}
